# microsoft-mcp

./: .mcp.json  CLAUDE.md  README.md  mail_rules_implementation_plan.md  pyproject.toml
src/microsoft_mcp/: auth.py  graph.py  tools.py
tests/: test_integration.py
